user profile skeleton

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:200,300&display=swap');
 
-@import url('https://fonts.googleapis.com/css?family=Londrina+Outline:300,300&display=swap');
+@import url("https://fonts.googleapis.com/css?family=Londrina+Outline&display=swap");
 
 /* Universal */
 body {
@@ -16,10 +16,26 @@ body {
   font-family: Roboto;
   font-size: 24px;
 }
-
 .logoContainer img {
   height: 90px;
 }
+.clearBackground {
+  background: #E5E5E5;
+  mix-blend-mode: normal;
+  opacity: 0.4;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+}
+button {
+  font-family: Roboto;
+  font-size: 24px;
+  background: #F0F0F0;
+  border-radius: 4px;
+  width: 190px;
+  height: 39px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
 
 
 /* Front Page */
@@ -39,7 +55,6 @@ body {
   /* top: 85px; */
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
-
 .userPhotoFeatured {
   /* position: absolute; */
   width: 238px;
@@ -47,5 +62,34 @@ body {
   /* left: calc(50% - 238px/2 + 75px); */
   bottom: 303.06px;
   background: url(/imgs/userPhotos/bradley.jpg);
+  border-radius: 4px;
+}
+
+/* User Profile */
+.profileRow1 {
+
+}
+
+.userPhotoProfile {
+  position: absolute;
+  width: 140px;
+  height: 130px;
+  left: calc(50% - 140px/2 - 129px);
+  top: 79px;
+
+  /* background: url(photo-1551861568-c0afa6653bc1.jpg), url(photo-1551861568-c0afa6653bc1.jpg); */
+  border: 2px solid #FFFFFF;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 4px;
+}
+
+.userBio {
+  position: absolute;
+  width: 253px;
+  height: 170px;
+  /* left: calc(50% - 253px/2 + 73.5px); */
+  /* top: 79px; */
+  background: #F0F0F0;
   border-radius: 4px;
 }
