--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -25,6 +25,7 @@ body {
   opacity: 0.4;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
+  z-index: -1;
 }
 button {
   font-family: Roboto;
@@ -34,6 +35,7 @@ button {
   width: 190px;
   height: 39px;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  z-index: 5;
 }
 
 
