--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -71,7 +71,6 @@ button {
 .profileRow1 {
 
 }
-
 .userPhotoProfile {
   position: absolute;
   width: 140px;
@@ -85,7 +84,6 @@ button {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   border-radius: 4px;
 }
-
 .userBio {
   position: absolute;
   width: 253px;
@@ -94,4 +92,11 @@ button {
   /* top: 79px; */
   background: #F0F0F0;
   border-radius: 4px;
+}
+
+/* notification dot */
+.notificationDot:before {
+  content: ' \25CF';
+  font-size: 30px;
+  color: #FF8C5B;
 }
