--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -44,6 +44,7 @@ button {
   background: #E5E5E5;
   box-shadow: inset 0px 4px 1px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
+  border: none;
 }
 
 ::-webkit-input-placeholder {
@@ -53,6 +54,8 @@ button {
   font-size: 18px;
   padding-left: 5px;
 }
+
+
 
 
 /* Front Page */
@@ -109,32 +112,61 @@ button {
   border-radius: 4px;
 }
 
+
+
 /* top bar */
 .notificationDot:before {
   content: ' \25CF';
+  vertical-align: 1ex;
   font-size: 30px;
-  left: -20em;
   color: #FF8C5B;
 }
-
-button, .homeButton{
+button, .searchButton{
   display: flexbox;
-  height: 39px;
-  width: 44px;
+  position: absolute;
+  width: 41px;
+  height: 35px;
+  /* right: -29px; */
+  /* top: 19px; */
   background-color: transparent;
   border: none;
   box-shadow: none;
 }
-
 .searchBarContainer {
   display: flexbox;
   padding: 8px;
   padding-bottom: 2px;
+  padding-top: 2px;
   background: #ffffff;
 }
-
 .navDrawer {
+  font-size: 24px;
+  font-weight: lighter;
+  color: #98C460;
   background: #ffffff;
-  width: 414px;
-  height: 340px;
+  width: 400px;
+  height: 320px;
+  padding: 20px;
+}
+.navLink:hover {
+  color: #38755D;
+}
+hr { 
+  display: block; 
+  overflow: hidden; 
+  border-style: inset; 
+  border-width: 0.5px;
+  background-color: #98C460;
+  left: 3.14%;
+  right: 7.97%;
+  top: 21.18%;
+  bottom: 2.65%;
+}
+.navDrawerBottom {
+  /* position: absolute; */
+  /* left: 40.34%; */
+  /* right: 40.34%; */
+  /* top: 97.35%; */
+  bottom: 2.65%;
+  border-bottom: 1px solid #98C460;
 }
